# iqtree-gpu-2

./: .gitignore  CMakeLists.txt
alignment/: alignment.cpp  alignment.h
kernels/: CMakeLists.txt  datatype.cuh  kernels.cu  kernels.cuh
main/: CMakeLists.txt  main.cpp  phyloanalysis.cpp
tree/: CMakeLists.txt  mtree.cpp  mtree.h  phylotree.cpp  phylotree.h
utils/: tools.h
